crates/escalier/tests/pass/basics.esc
let a = 5
let b = fn (x) => x
let c = fn () {
    let x = 5
    return x
}
let d = 5 + 10
let e = fn (f, x) => f(x) + x
let g = fn (a: 5, b: 10) => a + b
let h = fn (f, x, y) => f(x) + f(y)

let x: number = 5
let y: number = 10
let z = x + y

let foo = fn (a, b) => a + b
let bar = foo(5, 10)
