crates/escalier/tests/errors/not_enough_args.esc
let add = fn (a: number, b: number) -> number => a + b
add()

let add = fn (a, b) => a + b
add()
